Fix white space that is popping out of side of table header

--- a/components/automate-ui/src/app/modules/infra-proxy/chef-servers-list/chef-servers-list.component.scss
+++ b/components/automate-ui/src/app/modules/infra-proxy/chef-servers-list/chef-servers-list.component.scss
@@ -1,10 +1,13 @@
 @import "~styles/variables";
 
-chef-table {
-
-  .no-border-th {
-    border: none;
-    font-size: 12px;
+chef-thead {
+  chef-tr {
+    background: transparent;
+    
+    chef-th {
+      font-size: 12px;
+      border: none;
+    }
   }
 }
 
